--- a/lesson2 activity/index.html
+++ b/lesson2 activity/index.html
@@ -1,29 +1,16 @@
-<!DOCTYPE HTML>
-
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-
-    <meta charset="utf-8">
-
-    <meta name="viewport" content="width=device-width">
-
-    <title>Learn HTML</title>
-
-</head>
-
+    <title><i>introduction</i></title>
+    </head>
 <body>
-
-    <h1><i>hello</i></h1>
-
-    <h2><b>i am a student of codingal</b><strong></strong>codingal is a very good platfrom to learn coding</h2>
-
-    <h3>codingal is a very good platfrom to learn coding</h3>
-<h4>every one should learn cooding</h4>
-    <h5>it helps us in many ways</h5>
-<h6>i should recomend every one to goin codingal</h6>
-<p>test for live<strong>it helps us in many ways</strong></p>>
-</body>
-
-
+    <h1><b>hello my name is rafid ahmed.i am a student of class 11.i am also a student of science.</b></h1>
+    <h2>my favorite subject are <mark>math</mark> and <mark>physich.</mark><strong>my favorite game is <mark>cricket</mark></strong></h2>
+    <h3><b>my school name is<mark>jashore collectorate school,jashore.</mark>it is one of the gretest school on jashore.</b></h3>
+    <h4><b>my hobby is <em>travelling</em>i love travelling so much.</b></h4>
+    <h5>and now i tell about my aim.my aim is to be a <em>enginier.</em>in <mark>mit</mark></h5>
+    <h6><sup>so at last <mark>said all the student to study hard</mark> </sup></h6>
+    <p>this is all.
+    </p>
+    </body>
 </html>
