--- a/lesson2 activity/index.html
+++ b/lesson2 activity/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport"content="width=device-width">
     <title><i>introduction</i></title>
+    <link herf ="style.css"rel="stylesheet"type="text/css">
     </head>
 <body>
     <h1><b>hello my name is rafid ahmed.i am a student of class 11.i am also a student of science.</b></h1>
