--- a/Media in html/index.html
+++ b/Media in html/index.html
@@ -15,7 +15,7 @@
         </audio>
         <p>This is my favarite vidio</p>
         <vidio width="600"hight="350"controls autoplay poster="immage.jpeg"
-         <source src="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiy7qXrnqeJAxXPTGwGHQJkFvcQh-wKegQIShAC&url=https%3A%2F%2Fsports.ndtv.com%2Fcricket%2Fbcci-releases-video-to-commemorate-ms-dhonis-captaincy-1645794&usg=AOvVaw2PmwctaHsD7K36N4PqO8Se&opi=89978449"type="vidio/mp4">
+         <source src=""type="vidio/mp4">
         </vidio>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/qVHaXD7zHDQ?si=Rp56voALA8WKv4rP"
             title="YouTube video player" frameborder="0"
